<resources>
    <string name="app_name">alarmManagerApp</string>
    <string name="wifi_networks">Wifi networks</string>
    <string name="not_connected">NOT CONNECTED</string>
    <string name="location_not_defined">Location not defined</string>
    <string name="transfer_phone_location">transfer phone location</string>
    <string name="connect">Connect</string>
    <string name="retry">retry</string>

    <string name="incompatibility_bluetooth">incompatibility with bluetooth</string>
    <string name="bluetooth_on_required">bluetooth on is required</string>
    <string name="title_activity_location">Location</string>
    <string name="check_location">check location</string>
    <string name="search_location">search location</string>
    <string name="gps">GPS</string>
    <string name="network">network</string>
    <string name="error_to_connect_bluetooth">\"error to connect\"</string>
    <string name="searching_aparm">Searching alarm</string>
    <string name="transfer_server_url">Transfer server url</string>


</resources>
